--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,12 +29,14 @@ a {
   opacity: 0.7;
   font-size: 45px;
   letter-spacing: 5px;
+  color:#000;
 }
 
 .top-wrapper p {
   opacity: 0.7;
   font-size: 16px;
   margin-bottom: 40px;
+  color:#000;
 }
 
 .btn-wrapper {
